@@ -1,0 +1,215 @@
+; $Id: is-IS.ini 20480 $
+; Joomla! Project
+; Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8
+
+
+
+;Stepbar
+INSTL_STEPS_TITLE="Skref"
+INSTL_STEP_1_LABEL="1 : Tungumál"
+INSTL_STEP_2_LABEL="2 : Kerfisskoðun"
+INSTL_STEP_3_LABEL="3 : Leyfi"
+INSTL_STEP_4_LABEL="4 : Gagnagrunnur"
+INSTL_STEP_5_LABEL="5 : FTP stillingar"
+INSTL_STEP_6_LABEL="6 : Stillingar"
+INSTL_STEP_7_LABEL="7 : Lokið"
+
+;Language view
+INSTL_SELECT_LANGUAGE_TITLE="Veldu tungumál"
+INSTL_SELECT_LANGUAGE_DESC="Vinsamlegast veldu tungumál sem þú villt nota í uppsetningu Joomla!:"
+INSTL_LANGUAGE_TITLE="Veldu tungumál"
+INSTL_WARNJAVASCRIPT="Aðvörun! JavaScript verður að vera virkt til að uppsetningarforrit Joomla! virki rétt!"
+
+;Preinstall view
+INSTL_PRECHECK_TITLE="Kerfisskoðun"
+INSTL_PRECHECK_FOR_VERSION="Kerfisskoðun fyrir %s:"
+INSTL_PRECHECK_DESC="Ef eitthvert af þessum neðangreindum atriðum hefur ekki stuðning (Merkt <strong class="_QQ_"red"_QQ_">Nei</strong>) skaltu taka viðeigandi ráðstafanir til að laga þau. Ef þú lagar þau ekki getur það leitt til þess að uppsetningin á Joomla! virki ekki sem skyldi."
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_TITLE="Ráðlagðar stillingar:"
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_DESC="Þetta eru ráðlagðar PHP stillingar til að hafa fullann stuðning við allar aðgerðir Joomla!.<br /><br />Hinsvegar mun Joomla! virka þótt þessi atriði séu ekki uppfyllt."
+INSTL_PRECHECK_DIRECTIVE="Stilling"
+INSTL_PRECHECK_RECOMMENDED="Mælt með"
+INSTL_PRECHECK_ACTUAL="Raunveruleg"
+
+; Database view
+INSTL_DATABASE="Gagnagrunns stillingar"
+INSTL_DATABASE_HOST_DESC="Þetta er yfirleitt &quot;localhost&quot;"
+INSTL_DATABASE_HOST_LABEL="Hýsingar nafn"
+INSTL_DATABASE_NAME_DESC="Sumir hýsiaðilar leyfa eingöngu ákveðin gagnagrunns-nöfn á vefsíðum. Notaðu forskeyti í þessu tilfelli til að aðskilja mismunandi Joomla! síður."
+INSTL_DATABASE_NAME_LABEL="Nafn gagnagrunns"
+INSTL_DATABASE_OLD_PROCESS_DESC="Allar töflur úr fyrri Joomla! uppsetningum verða umskipt."
+INSTL_DATABASE_OLD_PROCESS_LABEL="Gamlar gagnagrunns töflur"
+INSTL_DATABASE_PASSWORD_DESC="Af öryggisástæðum þá er MySQL lykilorð krafist"
+INSTL_DATABASE_PASSWORD_LABEL="Lykilorð"
+INSTL_DATABASE_PREFIX_DESC="Veldu gagnagrunns forskeyti. Yfirleitt, þrír til fjórir stafir að lengd, og innihalda eingöngu ritstafi, og VERÐUR að enda með undirstriki. Ekki nota &quot;bak_&quot; þar sem það er notað fyrir afritaðar töflur."
+INSTL_DATABASE_PREFIX_LABEL="Forskeyti á töflur"
+INSTL_DATABASE_TYPE_DESC="Þetta er mjög liklega "_QQ_"MySQLi"_QQ_""
+INSTL_DATABASE_TYPE_LABEL="Tegund gagnagrunns"
+INSTL_DATABASE_USER_DESC="Notandanafn á gagnagrunninum, líklega gefið upp af hýsiaðila. Alls ekki er mælt með að nota "_QQ_"root"_QQ_"."
+INSTL_DATABASE_USER_LABEL="Notendanafn"
+INSTL_DATABASE_TITLE="Gagnagrunns tengingar stillingar"
+INSTL_DATABASE_DESC="<p>Joomla! vefur geymir öll gögn sín í gagnargunni. Þessi skjár gefur upp stillingar til að Joomla! geti tengst gagnagrunninum.</p><p>Ef þú ert að setja upp Joomla! vef á vefþjón, þá þarftu að fá þessar upplýsingar frá hýsiaðila.</p><p>Flestir hýsiaðilar krefjast þess að þú búir til gagnagrunn áður en uppsetning hefst. Ef þú færð skilaboðið "_QQ_"Get ekki tengst gagnagrunni"_QQ_", þá skaltu athuga hvort hýsingar nafn, notendanafn eða lykilorð se rett. Ef þú færð þá villi ennþá, þá skaltu hafa samband við hýsiaðila áður en þú heldur áfram með uppsetningu Joomla!.</p>" 
+
+;Filesystem view
+INSTL_AUTOFIND_FTP_PATH="Finna FTP slóð sjálfkrafa"
+INSTL_FTP="FTP Uppsetning"
+INSTL_FTP_DESC="<p>Á sumum vefþjónum þarftu að gefa upp FTP notendanafn og lykilorð til að getað klárað uppsetninguna. Ef þú lendir i vandræðum með að klára uppsetninguna með slökkt á þessu þá skaltu hafa samband við hýsiaðila til að vita hvort þörf sé á að nota þetta. </p><p>Af öryggisástæðum þá er best að bua til sér FTP notanda sem hefur eingöngu aðgang að Joomla! uppsetningunni og engu öðru. Hýsiaðili þinn getur aðstoðað þig við það.</p><p><strong>ATH:</strong> Ef þú ert að hýsa á Windows vefþjóni þá er <strong>engin</strong> þörf á þessu.</p>"
+INSTL_FTP_ENABLE_LABEL="Virkja FTP"
+INSTL_FTP_HOST_LABEL="FTP Hýsingar nafn"
+INSTL_FTP_PASSWORD_LABEL="FTP Lykilorð"
+INSTL_FTP_PORT_LABEL="FTP Tengi"
+INSTL_FTP_ROOT_LABEL="FTP rótar slóð"
+INSTL_FTP_SAVE_LABEL="Vista FTP lykilorð"
+INSTL_FTP_TITLE="FTP Uppsetning (<strong class="_QQ_"red"_QQ_">Valfrjálst - Flestir notendur meiga sleppa þessu skrefi - Smelltu á Næsta til að sleppa</strong>)"
+INSTL_FTP_USER_LABEL="FTP Notandanafn"
+INSTL_SITE_NAME_LABEL="Nafn vefs"
+INSTL_VERIFY_FTP_SETTINGS="Athuga FTP stillingar"
+INSTL_FTP_SETTINGS_CORRECT="Stillingar réttar"
+INSTL_FTP_USER_DESC="Viðvörun! Það er mælt með að skilja þetta eftir autt og slá inn FTP notandanafn þitt í hvert skipti sem þú flytur skrár."
+INSTL_FTP_PASSWORD_DESC="Viðvörun! Það er mælt með að skilja þetta eftir autt og slá inn FTP lykilorð þitt í hvert skipti sem þú flytur skrár."
+
+;Site View
+INSTL_SITE="Grunnstillingar"
+INSTL_ADMIN_EMAIL_LABEL="Netfang"
+INSTL_ADMIN_PASSWORD_LABEL="Lykilorð vefstjóra"
+INSTL_ADMIN_PASSWORD2_LABEL="Staðfesta lykilorð vefstjóra"
+INSTL_ADMIN_USER_LABEL="Notendanafn vefstjóra"
+INSTL_SITE_NAME_TITLE="Nafn vefs"
+INSTL_SITE_META_ADVANCED_SETTINGS="Ítarlegar stillingar - Valfrjálst"
+INSTL_SITE_NAME_DESC="Ritaðu hér nafn Joomla! vefsins sem þú ert að setja upp."
+INSTL_SITE_METADESC_LABEL="Lýsing á gögnum"
+INSTL_SITE_METADESC_TITLE_LABEL="Sláðu inn lýsingu af heild vefsíðunar sem notað er fyrir leitarvélar.Ákjósanlegast er að nota að hámarki 20 orð ."
+INSTL_SITE_METAKEYS_LABEL="Lýsigagna leitarorð"
+INSTL_SITE_METAKEYS_TITLE_LABEL="Sláðu inn leitarorð og setningar sem best lýsa vefsíðu þinni. Aðskildu leitarorð og orðasambönd með kommu."
+INSTL_SITE_CONF_TITLE="Staðfestu lykilorð og netfang vefstjóra"
+INSTL_SITE_CONF_DESC="Sláðu inn netfangið þitt. Þetta verður netfang Yfir-vefstjóra síðunar.<br /> Sláðu inn nýtt lykilorð og staðfestu það í viðeigandi reiti. Þú getur breytt sjálfgefna notandanafninu <strong>admin</strong>. Þetta verður notandanafnið og lykilorðið sem þú munt nota til að skrá þig inn á stjórnboð vefstjóra í lok uppsetningar.<br />  Ef þú ert að flytja, þá getur þú sleppt þessum kafla, gömlu stillingar þínar munu sjálfkrafa flytjast."
+INSTL_SITE_LOAD_SAMPLE_TITLE="Hlaða inn sýnigögnum"
+INSTL_SITE_LOAD_SAMPLE_DESC1="<strong>Mikilvægt!</strong>: Það er sterklega mælt með því að nýir Joomla! notendur setji inn sýnishorn af gögnum á síðuna. Til að gera þetta smelltu á hnappinn <i>áður</i> enn þú ferð á næsta stig."
+INSTL_SITE_LOAD_SAMPLE_DESC2="<strong>1. Sýnishornagögn:</strong> Áður en þú yfirgefur uppsetninguna þá getur þú hlaðið inn sýnisgögnum í gagnagrunn síðunar. Það eru tvær leiðir til að gera það:"
+INSTL_SITE_LOAD_SAMPLE_DESC3="<strong>1a. Sjálfgefin sýnishornagögn</strong> er hægt að setja inn. Til að gera það gangtu þá úr skugga um að 'Sjálfgefin Ensk (GB) sýnishornagög' séu í felliglugganum og smelltu svo á 'Setja inn sýnishornagögn' takkann."
+INSTL_SITE_LOAD_SAMPLE_DESC4="<strong>1b. Sérsniðin sýnishornagögn</strong> er hægt að setja inn. Til að gera það veldu þá gögnin sem þú villt nota í felliglugganum og smelltu svo á 'Setja inn sýnishornagögn' takkann."
+INSTL_SITE_LOAD_SAMPLE_DESC8="<strong>2. Hrein uppsetning</strong>: Ef þú ákveður að gera heina uppsetningu, skrifaðu þá nafn síðu, netfang vefstjóra og veldu lykilorð. Haltu svo áfram á næsta skref með því að smella á <em>Næsta</em>."
+INSTL_SITE_SAMPLE_LABEL="Sýnishornargögn"
+INSTL_SITE_INSTALL_SAMPLE_LABEL="Setja inn sýnishornagögn"
+INSTL_SITE_INSTALL_SAMPLE_DESC="Uppsetning sýnishornagagna er sterklega mælt með fyrir byrjendur. Þetta mun setja inn sýnishorn af greinum og öðru sem fylgir Joomla! uppsetningar pakkanum."
+INSTL_SITE_SAMPLE_LOADED="Sýnishornargögn hafa verið sett inn."
+INSTL_SAMPLE_DATA_SET="Sjálfgefin Ensk (GB) sýnishornagög"
+
+;Complete view
+INSTL_COMPLETE="Lokið"
+INSTL_COMPLETE_ADMINISTRATION_LOGIN_DETAILS="Upplýsingar fyrir innskráningu vefstjóra"
+INSTL_COMPLETE_DESC1="Smelltu á 'Síðu' takkann til að skoða Joomla! síðuna þína eða 'Stjórnborð' takkann til að fara á innskráningu á stjórnborð vefstjóra."
+INSTL_COMPLETE_DESC2="Á Joomla! samfélagssíðunni finnur þú lista yfrir tengla á tungunmálapakka sem til eru, einnig tengla á tungumála tengt efni á joomla.org fjölskyldu af síðum."
+INSTL_COMPLETE_DESC3="Smelltu á takkann hér til hægri til að opna á Samfélagssíðuna í nýjum glugga."
+INSTL_COMPLETE_ERROR_FOLDER_ALREADY_REMOVED="Uppsetningarmöppunni hefur nú þegar verið eytt."
+INSTL_COMPLETE_ERROR_FOLDER_DELETE="Uppsetningarmöppunni var ekki hægt að eyða sjálfkrafa. Vinsamlegast eyddu möppunni."
+INSTL_COMPLETE_FOLDER_REMOVED="Uppsetningarmöppunni var eytt"
+INSTL_COMPLETE_LANGUAGE_1="Joomla! á þýnu eigin tungumáli?"
+INSTL_COMPLETE_LANGUAGE_2="Heimsæktu Joomla! samfélagssíðuna fyrir niðurhal á tungumálapökkum."
+INSTL_COMPLETE_REMOVE_FOLDER="Fjarlægðu 'installation' (Uppsetningar) möppuna"
+INSTL_COMPLETE_REMOVE_INSTALLATION="VINSAMLEGA MUNIÐ AÐ<br />EYÐA ´INSTALLATION´ MÖPPUNNI.<br />Þú getur ekki haldið áfram frá þessum stað fyrr en 'installation' mappan hefur verið fjarlægð. Þetta er öryggisþáttur í Joomla!."
+INSTL_COMPLETE_TITLE="Til hamingju! Joomla! er núna uppsett og tilbúið til notkunar."
+
+;Database Model
+INSTL_DATABASE_COULD_NOT_CONNECT="Gat ekki tengst gagnagrunni. Tengill gaf upp töluna: %s"
+INSTL_DATABASE_EMPTY_NAME=""
+INSTL_DATABASE_ERROR_BACKINGUP="Eitthverjar villur komu upp við afritun á gagnagrunninum."
+INSTL_DATABASE_ERROR_CREATE="Villa kom upp við gerð gagnagrunnsins %s.<br />Það er hugsanlegt að notandinn hafi ekki næg réttindi til að búa til gagnagrunn. Gagnagrunnurinn sem er þörf á að nota gæti þurft að setja upp handvirkt áður en þú getur sett upp Joomla!."
+INSTL_DATABASE_ERROR_DELETE="Eitthverjar villur komu upp við eyðslu á gagnagrunninum."
+INSTL_DATABASE_FIELD_VALUE_REMOVE="Eyða"
+INSTL_DATABASE_FIELD_VALUE_BACKUP="Afrita"
+INSTL_DATABASE_FIX_TOO_LONG="MySQL töflu forskeytið verður að vera að hámarki 15 stafa."
+INSTL_DATABASE_INVALID_DB_DETAILS="Gagnagrunns atriðin sem gefin eru upp eru röng og / eða auð."
+INSTL_DATABASE_INVALID_MYSQL_VERSION="Þú þarft MySQL 5.0.4 eða hærra til að halda áfram með uppsetninguna. Útgáfan þín er: %s"
+INSTL_DATABASE_INVALID_TYPE="Vinsamlega veldu gerð af gagnagrunni"
+INSTL_DATABASE_NAME_TOO_LONG="MySQL gagnagrunns nafnið má mest vera 64 stafir."
+INSTL_DATABASE_PREFIX_INVALID_CHARS="MySQL töflu forskeytið verður að byrja með bókstaf og innihalda einungis bókstafi, tölustafi eða undirlínur."
+INSTL_DATABASE_INVALID_NAME="MySQL útgáfur fyrir 5.1.6 meiga ekki innihalda punkta eða aðra "_QQ_"sérstök"_QQ_" tákn í nafninu. Útgáfan þín er: %s"
+INSTL_DATABASE_NAME_INVALID_SPACES="MySQL gagnagrunns og töflu nöfn meiga ekki byrja né enda með bili."
+INSTL_DATABASE_NAME_INVALID_CHAR="Ekkert MySQL kennimerki má innihalda NUL ASCII(0x00)."
+INSTL_DATABASE_FILE_DOES_NOT_EXIST="Skráin %s er ekki til"
+
+;controllers
+INSTL_COOKIES_NOT_ENABLED="Vafrakökur virðast ekki vera virkar í vafranum þínum. Þú getur ekki sett upp forritið með þennan fídus óvirkan. Ef ekki þá gæti verið einhvað vandamál í <strong>session.save_path</strong> vefþjónar. Ef það er vandamálið skaltu hafa samband við hýsingaraðilan þinn ef þú kannt ekki að athuga það eða laga sjálf/ur."
+INSTL_HEADER_ERROR="Villa"
+
+;Helpers
+INSTL_PAGE_TITLE="Joomla! vef uppsetning"
+
+;Configuration model
+INSTL_ERROR_CONNECT_DB="Gat ekki tengst gagnagrunni. Tengill gaf upp töluna: %s"
+INSTL_STD_OFFLINE_MSG="Þessi síða er niðri vegna lagfæringa.<br /> Vinsamlega reynið aftur síðar."
+
+;Filesystem model
+INSTL_FTP_INVALIDROOT="Valda FTP mappan er ekki mappa úr þessari Joomla! uppsetningu"
+INSTL_FTP_NOCONNECT="Náði ekki að tengjast FTP þjóni"
+INSTL_FTP_NODELE="Aðgerðin "_QQ_"DELE"_QQ_" mistókst."
+INSTL_FTP_NODIRECTORYLISTING="Gat ekki náð í skráarlista frá FTP þjóninum."
+INSTL_FTP_NOLIST="Aðgerðin "_QQ_"LIST"_QQ_" mistókst."
+INSTL_FTP_NOLOGIN="Náði ekki innskráningu í FTP þjónin."
+INSTL_FTP_NOMKD="Aðgerðin "_QQ_"MKD"_QQ_" mistókst."
+INSTL_FTP_NONLST="Aðgerðin "_QQ_"NLST"_QQ_" mistókst."
+INSTL_FTP_NOPWD="Aðgerðin "_QQ_"PWD"_QQ_" mistókst."
+INSTL_FTP_NORETR="Aðgerðin "_QQ_"RETR"_QQ_" mistókst."
+INSTL_FTP_NORMD="Aðgerðin "_QQ_"RMD"_QQ_" mistókst."
+INSTL_FTP_NOROOT="Náði ekki að opna tiltekna FTP möppu."
+INSTL_FTP_NOSTOR="Aðgerðin "_QQ_"STOR"_QQ_" mistókst."
+INSTL_FTP_NOSYST="Aðgerðin "_QQ_"SYST"_QQ_" mistókst."
+INSTL_FTP_UNABLE_DETECT_ROOT_FOLDER="Náði ekki sjálfkrafa að finna FTP rótar möppuna."
+
+;others
+INSTL_ADVANCED_SETTINGS="Ítarlegar stillingar"
+INSTL_BASIC_SETTINGS="Stillingar"
+INSTL_CONFPROBLEM="Stillingar skráin þín eða mappa er ekki skrifanleg eða það var vandamál að búa hana til. Þú þarft að upphala eftirfarandi kóða handvirkt. Smelltu á texta svæðið til að velja allan kóðan og afritaðu, límdu hann svo í nýja texta skrá. Sýrðu þessa skrá 'configuration.php' og upphalaðu henni svo í ftp rótar möppuna."
+INSTL_DISPLAY_ERRORS="Sýna villur"
+INSTL_ERROR_DB="Eitthverjar villur komu upp við innsetningu gagnagrunnsins: %s"
+INSTL_FILE_UPLOADS="Skráar upphöl"
+INSTL_GNU_GPL_LICENSE="GNU Almennt Notkunar Leyfi"
+INSTL_INSTALLATION="Uppsetning"
+INSTL_LICENSE="Leyfi"
+INSTL_JSON_SUPPORT_AVAILABLE="JSON Stuðningur"
+INSTL_MAGIC_QUOTES_RUNTIME="Magic Quotes Runtime"
+INSTL_MB_LANGUAGE_IS_DEFAULT="MB tungumál er sjálfgefið"
+INSTL_MB_STRING_OVERLOAD_OFF="MB strengja yfirtaka slökkt"
+INSTL_MYSQL_SUPPORT="MySQL stuðningur"
+INSTL_NOTICEMBLANGNOTDEFAULT="PHP mbstrengjar tungumál er ekki sett á hlutlaust. Þetta er hægt að setja inn á staðnum með því að skrifa <strong>php_value mbstring.language neutral</strong> í <code>.htaccess</code> skránni þinni."
+INSTL_NOTICEMBSTRINGOVERLOAD="PHP mbstrengjar virknin er stillt á ofhleðslu. Þessu er hægt að slökkva á á staðnum með því að skrifa <strong>php_value mbstring.func_overload 0</strong> í <code>.htaccess</code> skránni þinni."
+INSTL_NOTICEYOUCANSTILLINSTALL="<br />Þú getur samt haldið uppsetningu áfram, stillingar skráin verður einfaldlega sýnd í enda uppsetningar. Þú verður þá að afrita og upphala henni handvirkt."
+INSTL_OUTPUT_BUFFERING="Úttaks flýtiminni"
+INSTL_PARSE_INI_FILE_AVAILABLE="INI lesara stuðningur"
+INSTL_PHP_VERSION="PHP útgáfa"
+INSTL_REGISTER_GLOBALS="Skrá víðværur"
+INSTL_SAFE_MODE="PHP öryggishamur"
+INSTL_SESSION_AUTO_START="Sjálfvirk ræsing lotu"
+INSTL_WRITABLE="Skrifanlegt"
+INSTL_XML_SUPPORT="XML stuðningur"
+INSTL_ZLIB_COMPRESSION_SUPPORT="Zlib þjöppunar stuðningur"
+
+;Global strings
+JADMINISTRATOR="Vefstjóri"
+JADVANCED="Ítarlegt"
+JCHECK_AGAIN="Athuga aftur"
+JERROR="Villa"
+JGLOBAL_ISFREESOFTWARE="%s er frír hugbúnaður, gefinn út með  <a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">GNU almennt notkunar leyfi</a>."
+JINVALID_TOKEN="Síðasta fyrirspurn var neitað því hún innihélt rangt öryggis tákn. Vinsamlega endurhlaðaðu síðuna og reyndu aftur."
+JNEXT="Næsta"
+JNO="Nei"
+JOFF="Óvirkt"
+JON="Virkt"
+JPREVIOUS="Fyrra"
+JSITE="Síða"
+JUSERNAME="Notendanafn"
+JYES="Já"
+
+; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="Gat ekki hlaðið inn gagnagrunns rekli: %s"
+JLIB_ENVIRONMENT_SESSION_EXPIRED="Tímabilið þitt rann út, vinsamlega endurhlaðaðu síðuna."
+JLIB_FORM_VALIDATE_FIELD_REQUIRED="Reitur ekki valfrjáls: %s"
+JLIB_FORM_VALIDATE_FIELD_INVALID="Ógildur reitur: %s"
+
+;Necessary for errors
+ADMIN_EMAIL="Netfang"
+ADMIN_PASSWORD="Lykilorð vefstjóra"
+ADMIN_PASSWORD2="Staðfesta lykilorð vefstjóra"
+SITE_NAME="Heiti heimasíðu"
