@@ -1,0 +1,23 @@
+<?xml version="1.0" encoding="utf-8"?>
+<metafile
+	version="1.6"
+	client="installation">
+	<name>Icelandic</name>
+	<version>1.6.1</version>
+	<creationDate>2011-01-11</creationDate>
+	<author>Joomlís</author>
+	<authorEmail>joomlis@joomlis.net</authorEmail>
+	<authorUrl>www.joomlis.net</authorUrl>
+	<copyright>Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.</copyright>
+	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
+	<description></description>
+	<files>
+		<filename>is-IS.ini</filename>
+	</files>
+	<metadata>
+		<name>Icelandic</name>
+		<tag>is-IS</tag>
+		<rtl>0</rtl>
+	</metadata>
+	<params />
+</metafile>
