@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+05-Apr-2011 Jean-Marie Simonet
+ #$ Adding Icelandic to installation languages
+ 
 04-Apr-2011 Mark Dexter
  # [#25519] Minor Bugs in mod_whosonline
 
